k8s-manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dogsitter-service
spec:
  selector:
    app: dogsitter # selecciona AMBOS deployments
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: dogsitter-canary-service
spec:
  selector:
    app: dogsitter
    version: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
